test/Fail/PostfixProjDisplay.err
PostfixProjDisplay.agda:25.8-12: error: [UnequalTerms]
a + a != a of type A
when checking that the expression refl has type (a + a) ≡ a
